# VisualStudioLspExt

./: .gitignore
src/client/: .gitignore
src/client/vs2022/VSIXProject1/: Client.cs  ContentDefinition.cs  VisualStudioLspExt.cs  VisualStudioLspExt.csproj  VisualStudioLspExt.sln  source.extension.vsixmanifest
src/server/: .gitignore  Cargo.toml
src/server/src/: main.rs  ts_queries.scm
