[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "*"
lsp-server = "*"
serde_json = "*"
tree-sitter = "0.20.0"
tree-sitter-c-sharp = "0.20.0"
serde = "*"
log = "*"
log4rs = "*"

[build-dependencies]
cc="*"
